--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     font-family: 'Open Sans', sans-serif;
     background: #222;
     background-image: url('https://source.unsplash.com/1600x900/?cities');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; 
     font-size: 120%;
   }
   
